[project]
name = "sample-training"
version = "0.1.0"
description = "Sample Tier 2 research project for script-runner E2E validation"
requires-python = ">=3.12"
# Only add deps NOT in the base image. torch, transformers, etc. are pre-installed.
dependencies = [
    "wandb>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_training"]
