[project]
name = "sample-training"
version = "0.1.0"
description = "Sample Tier 2 research project for script-runner E2E validation"
requires-python = ">=3.12"
# Note: system-site-packages should inherit base image packages (torch, trl, etc.)
# but some packages may need to be listed explicitly if not inherited correctly.
dependencies = [
    "wandb>=0.25",
    "datasets>=4.0",
    "trl>=0.29",
    "transformers>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_training"]
